tests/parser-test-files/parse-when.txt
================================================================================
Malformed when expression
================================================================================

(package test-parser)

(define f (when))

--------------------------------------------------------------------------------

error: Malformed when expression
  --> test:3:16
   |
 3 |  (define f (when))
   |                 ^ expected a predicate

================================================================================
Malformed function
================================================================================

(package test-package)

(define x (when 1))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:18
   |
 3 |  (define x (when 1))
   |                   ^ expected body
